Bug 53525 - FILEOPEN existing document: 2 columns Table of contents exceeds page width
Summary: FILEOPEN existing document: 2 columns Table of contents exceeds page width
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.0.0.0.alpha0+ Master
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:4.1.0 target:4.0.0.0.beta2
Keywords: regression
: 57953 (view as bug list)
Depends on:
Blocks: mab4.0
  Show dependency treegraph
 
Reported: 2012-08-15 05:48 UTC by Rainer Bielefeld Retired
Modified: 2012-12-18 15:19 UTC (History)
8 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
sample document with screenshot (132.29 KB, application/vnd.oasis.opendocument.text)
2012-08-15 05:48 UTC, Rainer Bielefeld Retired
Details
minimal patch (748 bytes, text/plain)
2012-12-15 16:10 UTC, Werner
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rainer Bielefeld Retired 2012-08-15 05:48:36 UTC
Created attachment 65583 [details]
sample document with screenshot

Steps how to reproduce with parallel installation of Master "LOdev  3.7.0.0.alpha0+   - WIN7 Home Premium (64bit) ENGLISH UI [Build ID: 6900781]" (tinderbox: 2008R2@20, pull time 2012-08-14 09:27:23):

1. open attached "sample10.odt":
   Bug: right from the TOC some strange link entries are shown
   
Comparing it with view in 3.5.6 (3.6.0.4) you will find out that
it's a 2 columns TOC, but wrongly first column takes complete page width.
Exceeding page width will not help, first column width will be exceeded, too.

Currently I only observed that with 1 document (so reason might be damaged document?), I attached a copy as sample document.
Comment 1 Korrawit Pruegsanusak 2012-10-21 06:49:17 UTC
REPRODUCIBLE with build from tinderbox Win-x86@6, pull time 2012-10-20 14:21:35, core: bb80f99092c4ad6d5015165a60f7a239dcb2fbff on Windows XP

NOT REPRODUCIBLE with official 3.5.7.2 on Windows XP

So regression
Comment 2 Korrawit Pruegsanusak 2012-10-27 16:13:49 UTC
Hello Norbert,

Unfortunately, I've done git bisect and found that your commit introduced this problem: http://cgit.freedesktop.org/libreoffice/core/commit/?id=de1c42d9f552bc57b28d50f4313bc982c63b84d4

Could you please have a look here? Thanks in advance!

Note: NOT reproducible on Windows XP with official 3.6.2.2
Comment 3 Roman Eisele 2012-10-27 17:24:06 UTC
REPRODUCIBLE also on Mac OS X (10.6.8) with LOdev 3.7.0.0.alpha0+ (Build ID: 370m0(Build:0); pull time: 2012-10-27 09:48:34).

Document looks like on the screenshot in the sample file -- strange link entries somewhere right of the TOC.

NOT reproducible with 3.6.3.1 on the same machine.

→ Changing Platform to “All”, because reproducible at least on two platforms (Windows and Mac OS X).
Comment 4 Michael Meeks 2012-10-29 10:26:40 UTC
Rainer, Korrawit - wow - this is a fantastic regression report vs. master - thanks so much ! :-) IIRC Norbert is on vacation for a while
Comment 5 manj_k 2012-12-15 14:14:58 UTC
See also: 'Bug 57953 - Page Columns Broken if "AutoWidth" not selected'.

[Please select the duplicate.]
Comment 6 Werner 2012-12-15 16:10:19 UTC
Created attachment 71553 [details]
minimal patch

Reverting  http://cgit.freedesktop.org/libreoffice/core/commit/?id=de1c42d9f552bc57b28d50f4313bc982c63b84d4 fixes this bug.

The original patch was intended to fix https://issues.apache.org/ooo/show_bug.cgi?format=multiple&id=118878, but i was not able to reproduce this bug after reverting.

To be shure, the minimal patch from https://issues.apache.org/ooo/show_bug.cgi?format=multiple&id=118878 could be applied instead (see attachment) after reverting http://cgit.freedesktop.org/libreoffice/core/commit/?id=de1c42d9f552bc57b28d50f4313bc982c63b84d4.
Comment 7 Michael Meeks 2012-12-17 21:20:54 UTC
No response from Norbert; so - at least for Beta2 I reverted and merged the simpler fix. Thanks Werner for the pointer ! :-)
Comment 8 Not Assigned 2012-12-17 21:23:37 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=092a4385c2616943baccc8ec43ca29c1dcfba9fa

fdo#53525 - Revert "writer:crash(i118878) when adding



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Not Assigned 2012-12-17 21:29:39 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=70ba2b40541adcea848ad40b19674d62e9cbbc37&g=libreoffice-4-0

fdo#53525 - Revert "writer:crash(i118878) when adding


It will be available in LibreOffice 4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 Michael Meeks 2012-12-18 14:31:30 UTC
*** Bug 57953 has been marked as a duplicate of this bug. ***
Comment 11 manj_k 2012-12-18 15:19:32 UTC
That works fine now (on WinXP 32b)
with:

LibO-Dev_4.1.0.0.alpha0+
Win-x86@6 MASTER
pull time 2012-12-18 08:36:19
core:fd17055017b7bb4c02c247ce1136447126cdb5e6

LibO-Dev_4.0.0.0.beta1+
Win-x86@6 libreoffice-4-0
pull time 2012-12-18 04:09:02
core:315b9b4a5c53eed5fd283bc329e05d7d8fbc9ebc

Tested with:
sample10.odt
attachment 65583 [details]

two_columns.odt
attachment 71206 [details] (from duplicate bug 57953)

... and some newly created .odt,
Format > Columns > Widths and spacing > ☐ AutoWidth deselected.