fdo#53525 - Revert "writer:crash(i118878) when adding

columns and chang. properties in a frame"

This reverts commit de1c42d9f552bc57b28d50f4313bc982c63b84d4.